--- a/public/index.html
+++ b/public/index.html
@@ -6,31 +6,21 @@
   <title>Teachable Machine Pose Model</title>
   <link rel="stylesheet" href="style.css" />
 
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin-top: 30px;
-    }
-
-    #canvas {
-      border: 1px solid #333;
-    }
-
-    #label-container div {
-      margin: 5px 0;
-      font-weight: bold;
-    }
-  </style>
-</head>
-
 <body>
 
   <div class="main-container">
     <div>
-      <button type="button" onclick="init()">Start</button>
-      <h2 id="h2" style="color: white;"></h2>
+      <button class="start-btn" onclick="init()">Start</button>
+      <div class="score">Score:<span class="score--value">00</span></div>
     </div>
+    <div class="game-over-container">
+      <span class="game-over">Game Over</span>
+      <span class="end-score">Score: <span>00</span></span>
+      <button class="restart">
+        Restart <img src="assets/play.svg" alt="restart" />
+      </button>
+    </div>
+
     <canvas width="500" height="500" id="gameCanvas"> </canvas>
     <div class="control-panel">
       <canvas id="canvas"></canvas>
