--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
     </div>
     <div class="game-over-container">
       <span class="game-over">Game Over</span>
-      <span class="end-score">Score: <span>00</span></span>
-      <button class="restart">
+      <span class="end-score">Score: <span class="score--final">00</span></span>
+      <button class="restart" onclick="init()">
         Restart <img src="assets/play.svg" alt="restart" />
       </button>
     </div>
