Atualização do modelo

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <div class="game-over-container">
       <span class="game-over">Game Over</span>
       <span class="end-score">Score: <span class="score--final">00</span></span>
-      <button class="restart" onclick="init()">
+      <button class="restart" onclick="restartGame()">
         Restart <img src="assets/play.svg" alt="restart" />
       </button>
     </div>
